US17326-automation-IDs         - Replaces nav/st with sh

--- a/src/index.html
+++ b/src/index.html
@@ -70,7 +70,7 @@
           "title": "All Media",
           "path": "/media",
           "top_level": true,
-          "automation-id": "nav-all-media"
+          "automation-id": "sh-all-media"
         }
       ],
       "Types",
@@ -78,27 +78,27 @@
         {
           "title": "Articles",
           "path": "/media/articles",
-          "automation-id": "nav-articles"
+          "automation-id": "sh-articles"
         },
         {
           "title": "Music",
           "path": "/media/music",
-          "automation-id": "nav-music"
+          "automation-id": "sh-music"
         },
         {
           "title": "Podcasts",
           "path": "/media/podcasts",
-          "automation-id": "nav-podcasts"
+          "automation-id": "sh-podcasts"
         },
         {
           "title": "Series",
           "path": "/media/series",
-          "automation-id": "nav-series"
+          "automation-id": "sh-series"
         },
         {
           "title": "Videos",
           "path": "/media/videos",
-          "automation-id": "nav-videos"
+          "automation-id": "sh-videos"
         }
       ],
       "Topics",
@@ -106,22 +106,22 @@
         {
           "title": "Culture",
           "path": "/media/topics/culture",
-          "automation-id": "nav-culture"
+          "automation-id": "sh-culture"
         },
         {
           "title": "Self",
           "path": "/media/topics/self",
-          "automation-id": "nav-self"
+          "automation-id": "sh-self"
         },
         {
           "title": "Work",
           "path": "/media/topics/work",
-          "automation-id": "nav-work"
+          "automation-id": "sh-work"
         },
         {
           "title": "Money",
           "path": "/media/topics/money",
-          "automation-id": "nav-money"
+          "automation-id": "sh-money"
         }
       ]
     ]
@@ -136,12 +136,12 @@
         {
           "title": "Groups",
           "path": "#",
-          "automation-id": "nav-connect-groups"
+          "automation-id": "sh-connect-groups"
         },
         {
           "title": "See who is nearby",
           "path": "#",
-          "automation-id": "nav-connect-see-who-is-nearby"
+          "automation-id": "sh-connect-see-who-is-nearby"
         }
       ],
       "Camps",
@@ -149,17 +149,17 @@
         {
           "title": "Man Camp",
           "path": "#",
-          "automation-id": "nav-camps-man-camp"
+          "automation-id": "sh-camps-man-camp"
         },
         {
           "title": "Woman Camp",
           "path": "#",
-          "automation-id": "nav-camps-woman-camp"
+          "automation-id": "sh-camps-woman-camp"
         },
         {
           "title": "Couples Camp",
           "path": "#",
-          "automation-id": "nav-camps-couples-camp"
+          "automation-id": "sh-camps-couples-camp"
         }
       ],
       "Serve",
@@ -167,22 +167,22 @@
         {
           "title": "Go",
           "path": "#",
-          "automation-id": "nav-serve-go"
+          "automation-id": "sh-serve-go"
         },
         {
           "title": "Reachout",
           "path": "#",
-          "automation-id": "nav-serve-reachout"
+          "automation-id": "sh-serve-reachout"
         },
         {
           "title": "Community Care",
           "path": "#",
-          "automation-id": "nav-serve-community-care"
+          "automation-id": "sh-serve-community-care"
         },
         {
           "title": "All service opportunities",
           "path": "#",
-          "automation-id": "nav-serve-all-service-opportunities"
+          "automation-id": "sh-serve-all-service-opportunities"
         }
       ],
       "Kids",
@@ -190,12 +190,12 @@
         {
           "title": "Kids' Club",
           "path": "#",
-          "automation-id": "nav-kids-kids-club"
+          "automation-id": "sh-kids-kids-club"
         },
         {
           "title": "Students 6-12th",
           "path": "#",
-          "automation-id": "nav-kids-students-612th"
+          "automation-id": "sh-kids-students-612th"
         }
       ]
     ]
@@ -204,48 +204,48 @@
     "title": "Come Visit",
     "description": "Locations, (in person and online)",
     "background": "//crds-media.imgix.net/...",
-    "automation-id": "nav-kids-students-612",
+    "automation-id": "sh-kids-students-612",
     "children": [
       [
-        { "title": "All Locations", "path": "#", "top_level": true, "automation-id": "nav-all-locations" },
-        { "title": "Crossroads Anywhere", "path": "#", "top_level": true, "automation-id": "nav-crossroads-anywhere" }
+        { "title": "All Locations", "path": "#", "top_level": true, "automation-id": "sh-all-locations" },
+        { "title": "Crossroads Anywhere", "path": "#", "top_level": true, "automation-id": "sh-crossroads-anywhere" }
       ],
       "Cincinnati Area",
       [
         {
           "title": "East Side",
           "path": "#",
-          "automation-id": "nav-location-east-side"
+          "automation-id": "sh-location-east-side"
         },
         {
           "title": "Florence",
           "path": "#",
-          "automation-id": "nav-location-east-side"
+          "automation-id": "sh-location-east-side"
         },
         {
           "title": "Mason",
           "path": "#",
-          "automation-id": "nav-location-mason"
+          "automation-id": "sh-location-mason"
         },
         {
           "title": "Oakley",
           "path": "#",
-          "automation-id": "nav-location-oakely"
+          "automation-id": "sh-location-oakely"
         },
         {
           "title": "Oxford",
           "path": "#",
-          "automation-id": "nav-location-oxford"
+          "automation-id": "sh-location-oxford"
         },
         {
           "title": "Uptown",
           "path": "#",
-          "automation-id": "nav-location-uptown"
+          "automation-id": "sh-location-uptown"
         },
         {
           "title": "West Side",
           "path": "#",
-          "automation-id": "nav-location-west-side"
+          "automation-id": "sh-location-west-side"
         }
       ],
       "Central Kentucky Area",
@@ -253,22 +253,22 @@
         {
           "title": "Lexington",
           "path": "#",
-          "automation-id": "nav-location-lexington"
+          "automation-id": "sh-location-lexington"
         },
         {
           "title": "Downtown Lexington",
           "path": "#",
-          "automation-id": "nav-location-downtown-lexington"
+          "automation-id": "sh-location-downtown-lexington"
         },
         {
           "title": "Georgetown",
           "path": "#",
-          "automation-id": "nav-location-georgetown"
+          "automation-id": "sh-location-georgetown"
         },
         {
           "title": "Dayton",
           "path": "#",
-          "automation-id": "nav-location-dayton"
+          "automation-id": "sh-location-dayton"
         }
       ],
       "More in Ohio",
@@ -276,12 +276,12 @@
         {
           "title": "Columbus",
           "path": "#",
-          "automation-id": "nav-location-columbus"
+          "automation-id": "sh-location-columbus"
         },
         {
           "title": "Dayton",
           "path": "#",
-          "automation-id": "nav-location-more-dayton"
+          "automation-id": "sh-location-more-dayton"
         }
       ],
       "Correctional Institutions",
@@ -289,37 +289,37 @@
         {
           "title": "Blackburn Correctional Complex",
           "path": "#",
-          "automation-id": "nav-location-blckburn-correctional-complex"
+          "automation-id": "sh-location-blckburn-correctional-complex"
         },
         {
           "title": "Dayton Correctional Institution",
           "path": "#",
-          "automation-id": "nav-location-dayton-correctional-institution"
+          "automation-id": "sh-location-dayton-correctional-institution"
         },
         {
           "title": "Lebanon Correctional Institution",
           "path": "#",
-          "automation-id": "nav-location-lebanon-correctional-institution"
+          "automation-id": "sh-location-lebanon-correctional-institution"
         },
         {
           "title": "London Correctional Institution",
           "path": "#",
-          "automation-id": "nav-location-london-correctional-institution"
+          "automation-id": "sh-location-london-correctional-institution"
         },
         {
           "title": "Marion Correctional Institution",
           "path": "#",
-          "automation-id": "nav-location-marion-correctional-institution"
+          "automation-id": "sh-location-marion-correctional-institution"
         },
         {
           "title": "Ohio Reformatory for Women",
           "path": "#",
-          "automation-id": "nav-location-ohio-reformatory-for-women"
+          "automation-id": "sh-location-ohio-reformatory-for-women"
         },
         {
           "title": "Warren Correctional Institution",
           "path": "#",
-          "automation-id": "nav-location-warren-correctional-institution"
+          "automation-id": "sh-location-warren-correctional-institution"
         }
       ]
     ]
@@ -334,12 +334,12 @@
         {
           "title": "Counselors",
           "path": "#",
-          "automation-id": "nav-support-counselors"
+          "automation-id": "sh-support-counselors"
         },
         {
           "title": "Prayer",
           "path": "#",
-          "automation-id": "nav-support-counselors"
+          "automation-id": "sh-support-counselors"
         }
       ],
       "Life Events",
@@ -347,13 +347,13 @@
         {
           "title": "Baptism",
           "path": "#",
-          "automation-id": "nav-support-baptism"
+          "automation-id": "sh-support-baptism"
         },
-        { "title": "Weddings", "path": "#", "automation-id": "nav-support-weddings" },
+        { "title": "Weddings", "path": "#", "automation-id": "sh-support-weddings" },
         {
           "title": "Funerals",
           "path": "#",
-          "automation-id": "nav-support-funerals"
+          "automation-id": "sh-support-funerals"
         }
       ],
       "Contact",
@@ -361,22 +361,22 @@
         {
           "title": "Staff Contacts",
           "path": "#",
-          "automation-id": "nav-support-staff-contacts"
+          "automation-id": "sh-support-staff-contacts"
         },
         {
           "title": "Ask a Question",
           "path": "#",
-          "automation-id": "nav-support-ask-a-question"
+          "automation-id": "sh-support-ask-a-question"
         },
         {
           "title": "Request Prayer",
           "path": "#",
-          "automation-id": "nav-support-request-prayer"
+          "automation-id": "sh-support-request-prayer"
         },
         {
           "title": "Jobs",
           "path": "#",
-          "automation-id": "nav-support-jobs"
+          "automation-id": "sh-support-jobs"
         }
       ]
     ]
