US17046 - JSON Files Make footer data remote

--- a/src/index.html
+++ b/src/index.html
@@ -54,8 +54,7 @@
       <!--heart-button id="4D9pCED9eM0GOQCOKyY0mS"></heart-button-->
     </div>
 
-
-    <shared-footer></shared-footer>
+    <shared-footer src="http://localhost:8080/data/shared-footer.json"></shared-footer>
 
     <script>
       window.CRDS = window.CRDS || {};
