US17046 - JSON Files Make snail trail data dynamic

--- a/src/index.html
+++ b/src/index.html
@@ -32,8 +32,9 @@
   </head>
   <body>
     <shared-header src="/data/navigation.json"></shared-header>
+    <snail-trail src="http://localhost:8080/data/snail-trail.json"></snail-trail>
 
-    <div class="jumbotron jumbotron-xl" style="margin-top: 92px; background-image: url('//crds-cms-uploads.imgix.net/content/images/streaming-anywhere-hero-off.jpg?auto=format,compress&amp;w=100&amp;fit=crop');">
+    <div class="jumbotron jumbotron-xl" style="background-image: url('//crds-cms-uploads.imgix.net/content/images/streaming-anywhere-hero-off.jpg?auto=format,compress&amp;w=100&amp;fit=crop');">
       <p class="small-heading text-uppercase">I am a small intro heading</p>
       <h1 class="title">the main heading</h1>
       <p>
