US17046 - JSON Files Add temp ref to data files

--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@
   </head>
   <body>
     <shared-header src="/data/navigation.json"></shared-header>
-    <snail-trail src="http://localhost:8080/data/snail-trail.json"></snail-trail>
+    <snail-trail src="/data/snail-trail.json"></snail-trail>
 
     <div class="jumbotron jumbotron-xl" style="background-image: url('//crds-cms-uploads.imgix.net/content/images/streaming-anywhere-hero-off.jpg?auto=format,compress&amp;w=100&amp;fit=crop');">
       <p class="small-heading text-uppercase">I am a small intro heading</p>
@@ -55,7 +55,7 @@
       <!--heart-button id="4D9pCED9eM0GOQCOKyY0mS"></heart-button-->
     </div>
 
-    <shared-footer src="http://localhost:8080/data/shared-footer.json"></shared-footer>
+    <shared-footer src="/data/shared-footer.json"></shared-footer>
 
     <script>
       window.CRDS = window.CRDS || {};
