US17413-header-skeleton 	- Wrapped shared header

--- a/src/index.html
+++ b/src/index.html
@@ -31,8 +31,11 @@
     <script src="/build/crds-components.js"></script>
   </head>
   <body>
-    <shared-header src="/data/navigation.json"></shared-header>
-    <snail-trail src="http://localhost:8080/data/snail-trail.json"></snail-trail>
+
+    <div class="shared-header-skeleton" style="position: absolute; top: 0; width: 100%; height: 48.52px; background-color: #0095d9">
+        <shared-header src="/data/navigation.json" ></shared-header>
+        <!-- <snail-trail src="http://localhost:8080/data/snail-trail.json"></snail-trail> -->
+    </div>
 
     <div class="jumbotron jumbotron-xl" style="background-image: url('//crds-cms-uploads.imgix.net/content/images/streaming-anywhere-hero-off.jpg?auto=format,compress&amp;w=100&amp;fit=crop');">
       <p class="small-heading text-uppercase">I am a small intro heading</p>
