--- a/src/index.html
+++ b/src/index.html
@@ -32,9 +32,12 @@
   </head>
   <body>
 
-    <div class="shared-header-skeleton" style="position: absolute; top: 0; width: 100%; height: 48.52px; background-color: #0095d9">
+    <div class="shared-header-skeleton" style="min-height: 48.52px; background-color: #0095d9">
         <shared-header src="/data/navigation.json" ></shared-header>
-        <snail-trail src="/data/snail-trail.json"></snail-trail>
+    </div>
+      
+    <div class="snail-trail" style="min-height: 41.98px; background-color: white">
+      <snail-trail src="/data/snail-trail.json"></snail-trail>
     </div>
 
     <div class="jumbotron jumbotron-xl" style="background-image: url('//crds-cms-uploads.imgix.net/content/images/streaming-anywhere-hero-off.jpg?auto=format,compress&amp;w=100&amp;fit=crop');">
@@ -58,7 +61,9 @@
       <!--heart-button id="4D9pCED9eM0GOQCOKyY0mS"></heart-button-->
     </div>
 
-    <shared-footer src="/data/shared-footer.json"></shared-footer>
+    <div class="shared-footer-skeleton" style="min-height: 613.976px; background-color: #e7e7e7">
+      <shared-footer src="/data/shared-footer.json"></shared-footer>
+    </div>
 
     <script>
       window.CRDS = window.CRDS || {};
