US17046 - JSON Files Remove data files and add catches for not having any data

--- a/src/index.html
+++ b/src/index.html
@@ -31,8 +31,8 @@
     <script src="/build/crds-components.js"></script>
   </head>
   <body>
-    <shared-header src="/data/shared-header.json"></shared-header>
-    <snail-trail src="/data/snail-trail.json"></snail-trail>
+    <shared-header src="http://localhost:8080/data/shared-header.json"></shared-header>
+    <snail-trail src="http://localhost:8080/data/snail-trail.json"></snail-trail>
 
     <div class="jumbotron jumbotron-xl" style="background-image: url('//crds-cms-uploads.imgix.net/content/images/streaming-anywhere-hero-off.jpg?auto=format,compress&amp;w=100&amp;fit=crop');">
       <p class="small-heading text-uppercase">I am a small intro heading</p>
@@ -58,6 +58,6 @@
       <!--heart-button id="4D9pCED9eM0GOQCOKyY0mS"></heart-button-->
     </div>
 
-    <shared-footer src="/data/shared-footer.json"></shared-footer>
+    <shared-footer src="http://localhost:8080/data/shared-footer.json"></shared-footer>
   </body>
 </html>
