US17413 - Header Skeleton Use Netlify deploy preview for the content

--- a/src/index.html
+++ b/src/index.html
@@ -33,11 +33,11 @@
   <body>
 
     <div class="shared-header-skeleton" style="min-height: 48.52px; background-color: #0095d9">
-        <shared-header src="/data/navigation.json" ></shared-header>
+        <shared-header src="https://deploy-preview-916--int-crds-net.netlify.com/data/shared-header.json" ></shared-header>
     </div>
 
     <div class="snail-trail" style="min-height: 41.98px; background-color: white">
-      <snail-trail src="/data/snail-trail.json"></snail-trail>
+      <snail-trail src="https://deploy-preview-916--int-crds-net.netlify.com/data/snail-trail.json"></snail-trail>
     </div>
 
     <div class="jumbotron jumbotron-xl" style="background-image: url('//crds-cms-uploads.imgix.net/content/images/streaming-anywhere-hero-off.jpg?auto=format,compress&amp;w=100&amp;fit=crop');">
@@ -65,7 +65,7 @@
     </div>
 
     <div class="shared-footer-skeleton" style="min-height: 613.976px; background-color: #e7e7e7">
-      <shared-footer src="/data/shared-footer.json"></shared-footer>
+      <shared-footer src="https://deploy-preview-916--int-crds-net.netlify.com/data/shared-footer.json"></shared-footer>
     </div>
   </body>
 </html>
