US17046 - JSON Files Use Netlify for snail trail data

--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
     </div>
 
     <div class="snail-trail" style="min-height: 43px; background-color: white">
-      <snail-trail src="https://deploy-preview-916--int-crds-net.netlify.com/data/snail-trail.json"></snail-trail>
+      <snail-trail name="trending"></snail-trail>
     </div>
 
     <div class="jumbotron jumbotron-xl" style="background-image: url('//crds-cms-uploads.imgix.net/content/images/streaming-anywhere-hero-off.jpg?auto=format,compress&amp;w=100&amp;fit=crop');">
