US17046 - JSON Files Shared footer uses Netlify for data

--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
   <body>
 
     <div class="shared-header-skeleton" style="min-height: 49px; background-color: #0095d9">
-        <shared-header src="https://deploy-preview-916--int-crds-net.netlify.com/data/shared-header.json" ></shared-header>
+      <shared-header src="https://deploy-preview-916--int-crds-net.netlify.com/data/shared-header.json" ></shared-header>
     </div>
 
     <div class="snail-trail" style="min-height: 43px; background-color: white">
@@ -65,7 +65,7 @@
     </div>
 
     <div class="shared-footer-skeleton" style="min-height: 626px; background-color: #e7e7e7">
-      <shared-footer src="https://deploy-preview-916--int-crds-net.netlify.com/data/shared-footer.json"></shared-footer>
+      <shared-footer></shared-footer>
     </div>
   </body>
 </html>
