de6860 shared header skeleton block
use @Element instead of document

--- a/src/index.html
+++ b/src/index.html
@@ -36,6 +36,8 @@
       .shared-header,
       .shared-header-skeleton {
         min-height: var(--skeleton-blue-bar-height);
+        position: relative;
+        z-index: 10;
       }
 
       .shared-snail-trail-skeleton {
