--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
   <body>
 
     <div class="shared-header-skeleton" style="min-height: 49px; background-color: #0095d9">
-      <shared-header env="Int"></shared-header>
+      <shared-header></shared-header>
     </div>
 
     <div class="snail-trail" style="min-height: 43px; background-color: white">
