Change shared-snail-trail to snail-trail

--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
         z-index: 10;
       }
 
-      .shared-snail-trail-skeleton {
+      .snail-trail-skeleton {
         background-color: #fff;
         min-height: var(--skeleton-snail-trail-height);
         position: relative;
@@ -67,7 +67,7 @@
       <shared-header env="int"></shared-header>
     </div>
 
-    <div class="shared-snail-trail-skeleton">
+    <div class="snail-trail-skeleton">
       <snail-trail name="trending"></snail-trail>
     </div>
 
