US17538 Active state Implement new styles

--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,10 @@
 
     <div class="snail-trail-skeleton">
       <snail-trail name="trending"></snail-trail>
+      <!-- <snail-trail>
+        <snail-trail-link onclick="alert('zzz')">Click Me</snail-trail-link>
+        <snail-trail-link href="/something">No Event</snail-trail-link>
+      </snail-trail> -->
     </div>
 
     <div class="jumbotron jumbotron-xl" style="background-image: url('//crds-cms-uploads.imgix.net/content/images/streaming-anywhere-hero-off.jpg?auto=format,compress&amp;w=100&amp;fit=crop');">
