--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,7 @@
     </script>
 
     <script src="/build/crds-components.js"></script>
+    <script id="hubspot" charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/v2.js"></script>
   </head>
   <body>
 
@@ -31,7 +32,7 @@
     </div>
 
     <div class="snail-trail-skeleton">
-      <snail-trail name="trending"></snail-trail>
+      <snail-trail name="media"></snail-trail>
       <!-- <snail-trail>
         <snail-trail-link onclick="alert('zzz')">Click Me</snail-trail-link>
         <snail-trail-link href="/something">No Event</snail-trail-link>
