defect/DE6903-sh-app-cta-bug 	- Adds inline style to skeleton to simulate shared-header when both shared-header and shared-header-skeleton are position sticky

--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
   </head>
   <body>
 
-    <div class="shared-header-skeleton">
+    <div class="shared-header-skeleton" style="position: sticky; top:0;">
       <shared-header env="int"></shared-header>
     </div>
 
