--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
     </div>
 
     <div class="snail-trail-skeleton">
-      <snail-trail name="media"></snail-trail>
+      <snail-trail name="media" src="http://localhost:8080/snail-trails/media/int.json"></snail-trail>
       <!-- <snail-trail>
         <snail-trail-link onclick="alert('zzz')">Click Me</snail-trail-link>
         <snail-trail-link href="/something">No Event</snail-trail-link>
