US17540 - Add Subscribe Functionality Point to deploy preview url for snail trail

--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,8 @@
     </div>
 
     <div class="snail-trail-skeleton">
-      <snail-trail name="media" src="http://localhost:8080/snail-trails/media/int.json"></snail-trail>
+      <!--snail-trail name="media"></snail-trail-->
+      <snail-trail src="https://5d14da9851a557000af0c8cc--crds-data.netlify.com/snail-trails/media/int.json"></snail-trail>
       <!-- <snail-trail>
         <snail-trail-link onclick="alert('zzz')">Click Me</snail-trail-link>
         <snail-trail-link href="/something">No Event</snail-trail-link>
