US17540 - Add Subscribe Use the media snail trail from int

--- a/src/index.html
+++ b/src/index.html
@@ -31,8 +31,7 @@
     </div>
 
     <div class="snail-trail-skeleton">
-      <!--snail-trail name="media"></snail-trail-->
-      <snail-trail src="https://deploy-preview-9--crds-data.netlify.com/snail-trails/media/int.json"></snail-trail>
+      <snail-trail name="media" env="int"></snail-trail>
       <!-- <snail-trail>
         <snail-trail-link onclick="alert('zzz')">Click Me</snail-trail-link>
         <snail-trail-link href="/something">No Event</snail-trail-link>
