Prepend heart-button with crds

--- a/src/index.html
+++ b/src/index.html
@@ -60,7 +60,7 @@
         lacinia, nibh mi posuere lorem, vitae dignissim tellus nibh nec leo.
       </p>
 
-      <!--heart-button id="4D9pCED9eM0GOQCOKyY0mS"></heart-button-->
+      <crds-heart-button contentful-id="4D9pCED9eM0GOQCOKyY0mS"></heart-button>
     </div>
 
     <div class="shared-footer-skeleton">
