Prepend "crds-" to snail-trail and snail-trail-link

--- a/src/index.html
+++ b/src/index.html
@@ -32,11 +32,11 @@
     </div>
 
     <div class="snail-trail-skeleton">
-      <snail-trail name="media" env="int"></snail-trail>
-      <!-- <snail-trail>
-        <snail-trail-link onclick="alert('zzz')">Click Me</snail-trail-link>
-        <snail-trail-link href="/something">No Event</snail-trail-link>
-      </snail-trail> -->
+      <crds-snail-trail name="media" env="int"></crds-snail-trail>
+      <!-- <crds-snail-trail>
+        <crds-snail-trail-link onclick="alert('zzz')">Click Me</crds-snail-trail-link>
+        <crds-snail-trail-link href="/something">No Event</crds-snail-trail-link>
+      </crds-snail-trail> -->
     </div>
 
     <div class="jumbotron jumbotron-xl" style="background-image: url('//crds-cms-uploads.imgix.net/content/images/streaming-anywhere-hero-off.jpg?auto=format,compress&amp;w=100&amp;fit=crop');">
