Prepend "crds-" to shared-footer

--- a/src/index.html
+++ b/src/index.html
@@ -64,7 +64,7 @@
     </div>
 
     <div class="shared-footer-skeleton">
-      <shared-footer></shared-footer>
+      <crds-shared-footer></crds-shared-footer>
     </div>
   </body>
 </html>
