Prepend "crds-" to shared-header

--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
   <body>
 
     <div class="shared-header-skeleton">
-      <shared-header env="int"></shared-header>
+      <crds-shared-header env="int"></crds-shared-header>
     </div>
 
     <div class="snail-trail-skeleton">
