--- a/src/index.html
+++ b/src/index.html
@@ -62,7 +62,9 @@
     </p>
 
     <crds-heart-button contentful-id="4D9pCED9eM0GOQCOKyY0mS"></crds-heart-button>
-    <crds-site-happenings></crds-site-happenings>
+    <div style="min-height: 500px;">
+      <crds-site-happenings></crds-site-happenings>
+    </div>
   </div>
 
   <div class="shared-footer-skeleton">
