WIP: lf skeleton refactor

--- a/src/index.html
+++ b/src/index.html
@@ -80,8 +80,7 @@
 
     <crds-heart-button contentful-id="4D9pCED9eM0GOQCOKyY0mS"></crds-heart-button>
     <div class="site-happenings-skeleton">
-      <crds-site-happenings auth-token>
-      </crds-site-happenings> 
+      <crds-site-happenings auth-token/>
     </div>
     <div class="life-stages-skeleton">
       <crds-recommended-content auth-token>
