US18120 Prerender logo Decouple logo and position in shared-header-skeleton

--- a/src/index.html
+++ b/src/index.html
@@ -23,13 +23,16 @@
       min-height: 60px;
     }
 
+    .shared-header,
     .shared-header-skeleton {
-      display: flex;
-      justify-content: center;
+      min-height: 49px !important;
     }
 
     .shared-header-skeleton svg {
-      margin: 7px 0 0 7px;
+      left: 45%;
+      margin: 7px 0 0 20px;
+      position: absolute;
+      right: 50%;
     }
   </style>
 
