changed both logos to be position absolute

--- a/src/index.html
+++ b/src/index.html
@@ -25,14 +25,15 @@
 
     .shared-header,
     .shared-header-skeleton {
-      min-height: 49px !important;
+      min-height: 50px !important;
+      width: 100%;
     }
 
     .shared-header-skeleton .shared-header-skeleton-logo {
-      left: 45%;
-      margin: 7px 0 0 20px;
+      left: 50% !important;
+      margin: 9px 0 0 -52px !important;
       position: absolute;
-      right: 50%;
+      right: 0 !important;
     }
   </style>
 
