--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,7 @@
       Typekit.load({ async: true });
     } catch (e) { }
   </script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
   <script type="module" src="/build/crds-components.esm.js"></script>
   <script nomodule src="/build/crds-components.js"></script>
@@ -67,30 +68,7 @@
     <a class="btn btn-lg btn-primary" href="#">Call To Action</a>
   </div>
 
-  <div class="container soft-sides push-ends">
-    <div class="greeting-skeleton">
-      <crds-greeting default-name="friend" auth-token="">
-      </crds-greeting>
-    </div>
-    <p class="lead text-center push-bottom">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin
-      ullamcorper mauris erat, id auctor quam tempus in. Mauris neque mauris,
-      tempor in cursus vel, consectetur ut lorem. Phasellus tristique mauris a
-      arcu malesuada lacinia. Praesent sodales ultrices tincidunt. Curabitur
-      sollicitudin varius turpis, ac cursus ex euismod quis. Curabitur a
-      lacinia nisi, ac molestie mi. Phasellus malesuada, risus non ornare
-      lacinia, nibh mi posuere lorem, vitae dignissim tellus nibh nec leo.
-    </p>
-
-    <crds-heart-button contentful-id="4D9pCED9eM0GOQCOKyY0mS"></crds-heart-button>
-    <div class="site-happenings-skeleton">
-      <crds-site-happenings auth-token />
-    </div>
-    <div class="life-stages-skeleton">
-      <crds-recommended-content auth-token>
-      </crds-recommended-content>
-    </div>
-  </div>
+  
 
   <div class="shared-footer-skeleton">
     <crds-shared-footer></crds-shared-footer>
