functionality almost completed.

--- a/src/index.html
+++ b/src/index.html
@@ -68,7 +68,7 @@
     <a class="btn btn-lg btn-primary" href="#">Call To Action</a>
   </div>
 
-  
+  <crds-tithe-challenge auth-token></crds-tithe-challenge>
 
   <div class="shared-footer-skeleton">
     <crds-shared-footer></crds-shared-footer>
