adding 'crds-image-title-cutout'to storybook

--- a/src/index.html
+++ b/src/index.html
@@ -77,6 +77,8 @@
 
   <crds-tithe-challenge auth-token></crds-tithe-challenge>
 
+  <crds-image-title-cutout></crds-image-title-cutout>
+
   <div class="shared-footer-skeleton">
     <crds-shared-footer></crds-shared-footer>
   </div>
