US18392 Video Embed Add stories and example in index.html

--- a/src/index.html
+++ b/src/index.html
@@ -75,6 +75,10 @@
     <a class="btn btn-lg btn-primary" href="#">Call To Action</a>
   </div>
 
+  <div class="container">
+    <crds-video youtube-id="DP1TOQ2G0Ks" transcript="Morbi leo risus, porta ac consectetur ac, vestibulum at eros..."></crds-video>
+  </div>
+
   <crds-tithe-challenge auth-token></crds-tithe-challenge>
 
   <div class="shared-footer-skeleton">
