fixed toaster text that wasn't displaying

--- a/src/index.html
+++ b/src/index.html
@@ -66,7 +66,12 @@
       Repudiandae quos reiciendis vitae eum.
     </p>
     <a class="btn btn-lg btn-primary" href="#">Call To Action</a>
-  </div>  
+  </div>
+
+  <crds-site-select auth-token card-site-id='1'></crds-site-select>
+  <crds-site-select auth-token card-site-id='2'></crds-site-select>
+  <crds-site-select auth-token card-site-id='6'></crds-site-select>
+  
 
   <div class="shared-footer-skeleton">
     <crds-shared-footer></crds-shared-footer>
