--- a/src/index.html
+++ b/src/index.html
@@ -75,6 +75,10 @@
     <a class="btn btn-lg btn-primary" href="#">Call To Action</a>
   </div>
 
+  <crds-site-select auth-token card-site-id='1'></crds-site-select>
+  <crds-site-select auth-token card-site-id='2'></crds-site-select>
+  <crds-site-select auth-token card-site-id='6'></crds-site-select>
+  
   <crds-tithe-challenge auth-token></crds-tithe-challenge>
 
   <div class="shared-footer-skeleton">
@@ -87,10 +91,6 @@
     console.log('component rendered', e.detail.tagName);
   })
 
-  const siteButtons = Array.from(document.getElementsByTagName('crds-site-select'))
-  siteButtons.map(element => {
-    element.addEventListener()
-  })
 </script>
 
 </html>
