--- a/src/index.html
+++ b/src/index.html
@@ -76,7 +76,45 @@
   </div>
 
   <div class="container">
-    <crds-video youtube-id="DP1TOQ2G0Ks" transcript="Morbi leo risus, porta ac consectetur ac, vestibulum at eros..."></crds-video>
+    <div style="padding-bottom: 30px;">
+      <crds-video youtube-id="DP1TOQ2G0Ks" transcript="Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+      Repudiandae quos reiciendis vitae eumLorem ipsum dolor sit amet, consectetur adipisicing elit.
+      Repudiandae quos reiciendis vitae eumLorem ipsum dolor sit amet, consectetur adipisicing elit.
+      Repudiandae quos reiciendis vitae eumLorem ipsum dolor sit amet, consectetur adipisicing elit.
+      Repudiandae quos reiciendis vitae eumLorem ipsum dolor sit amet, consectetur adipisicing elit.
+      Repudiandae quos reiciendis vitae eumLorem ipsum dolor sit amet, consectetur adipisicing elit.
+      Repudiandae quos reiciendis vitae eumLorem ipsum dolor sit amet, consectetur adipisicing elit.
+      Repudiandae quos reiciendis vitae eumLorem ipsum dolor sit amet, consectetur adipisicing elit.
+      Repudiandae quos reiciendis vitae eumLorem ipsum dolor sit amet, consectetur adipisicing elit.
+      Repudiandae quos reiciendis vitae eumLorem ipsum dolor sit amet, consectetur adipisicing elit.
+      Repudiandae quos reiciendis vitae eumLorem ipsum dolor sit amet, consectetur adipisicing elit.
+      Repudiandae quos reiciendis vitae eumLorem ipsum dolor sit amet, consectetur adipisicing elit.
+      Repudiandae quos reiciendis vitae eumLorem ipsum dolor sit amet, consectetur adipisicing elit.
+      Repudiandae quos reiciendis vitae eumLorem ipsum dolor sit amet, consectetur adipisicing elit.
+      Repudiandae quos reiciendis vitae eumLorem ipsum dolor sit amet, consectetur adipisicing elit.
+      Repudiandae quos reiciendis vitae eumLorem ipsum dolor sit amet, consectetur adipisicing elit.
+      Repudiandae quos reiciendis vitae eumLorem ipsum dolor sit amet, consectetur adipisicing elit.
+      Repudiandae quos reiciendis vitae eumLorem ipsum dolor sit amet, consectetur adipisicing elit.
+      Repudiandae quos reiciendis vitae eumLorem ipsum dolor sit amet, consectetur adipisicing elit.
+      Repudiandae quos reiciendis vitae eumLorem ipsum dolor sit amet, consectetur adipisicing elit.
+      Repudiandae quos reiciendis vitae eum"></crds-video>
+    </div>
+    <div class="row push-bottom">
+      <div class="col-sm-6">
+        <crds-video youtube-id="DP1TOQ2G0Ks"></crds-video>
+      </div>
+      <div class="col-sm-6">
+        <crds-video youtube-id="DP1TOQ2G0Ks"></crds-video>
+      </div>
+    </div>
+    <div class="row push-bottom">
+      <div class="col-sm-6">
+        <crds-video youtube-id="DP1TOQ2G0Ks"></crds-video>
+      </div>
+      <div class="col-sm-6">
+        <crds-video youtube-id="DP1TOQ2G0Ks"></crds-video>
+      </div>
+    </div>
   </div>
 
   <crds-tithe-challenge auth-token></crds-tithe-challenge>
