US17970-media-card - Resolves requested changes

--- a/src/index.html
+++ b/src/index.html
@@ -102,9 +102,16 @@
     meta="10/19/19 - 10/25/19" 
     thumbnail-src="https://crossroads-media.imgix.net/images/crds-music/jumbotron/music-laying-it-all-down-bg.jpg?format=auto,compress" 
     image-src="https://crds-media.imgix.net/5CaAjF9bDkXWOw6YXl92cZ/fccff599d00f378c1aae525bfff94a2b/onsite-groups-header_2x.jpg?format=auto,compress" 
-    body="<p> LAUNCH 2019 is a great way to make the connections that will help you thrive as you start your journey post high school. We’ll have dinner, live worship, and a chance to meet some college students and hear their stories. <a href='#'> RSVP here. <a/> </p>"
     button-src="#" 
-    content-type="article"/>
+    content-type="article">
+    <p> 
+      LAUNCH 2019 is a great way to make the 
+      connections that will help you thrive as 
+      you start your journey post high school. 
+      We’ll have dinner, live worship, and a chance 
+      to meet some college students and hear their stories. 
+      <a href='#'> RSVP here. <a/> </p>
+    </crds-media-card>
   </div>
 
 
