adding label component and styles

--- a/src/index.html
+++ b/src/index.html
@@ -62,6 +62,8 @@
         <crds-snail-trail-link onclick="alert('zzz')">Click Me</crds-snail-trail-link>
         <crds-snail-trail-link href="/something">No Event</crds-snail-trail-link>
       </crds-snail-trail> -->
+      <crds-primary-button text="test button" color="cyan"></crds-primary-button>
+      <crds-label tint="warning" text="Label"></crds-label>
   </div>
 
   <div class="jumbotron jumbotron-xl"
@@ -122,7 +124,7 @@
   <crds-site-select auth-token card-site-id='1'></crds-site-select>
   <crds-site-select auth-token card-site-id='2'></crds-site-select>
   <crds-site-select auth-token card-site-id='6'></crds-site-select>
-  
+
 
   <crds-tithe-challenge auth-token></crds-tithe-challenge>
 
