using globla script in storybook. fixing content block handler for my site set profile.

--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -2,4 +2,5 @@
 <script nomodule src="/build/crds-components.js"></script>
 
 <script src=https://use.typekit.net/ccb3vpa.js></script>
+<script src="app.ts"></script>
 <script>try{Typekit.load({ async: true });}catch(e){}</script>
