--- a/src/index.html
+++ b/src/index.html
@@ -64,6 +64,58 @@
       </crds-snail-trail> -->
       <crds-primary-button text="test button" color="cyan"></crds-primary-button>
       <crds-label tint="warning" text="Label"></crds-label>
+      <br />
+
+      <crds-button type="link" text="some text"  ></crds-button>
+      <crds-button type="link" secondary="true" text="some text"></crds-button>
+      <br />
+      <crds-button color="blue" text="some text" size="lg" ></crds-button>
+      <crds-button color="blue" text="some text"></crds-button>
+      <crds-button color="blue" text="some text" size="sm"></crds-button>
+
+      <br />
+      <crds-button color="cyan" text="some text" size="lg"></crds-button>
+      <crds-button color="cyan" text="some text"></crds-button>
+      <crds-button color="cyan" text="some text" size="sm"></crds-button>
+      <br />
+      <crds-button color="gray" text="some text" size="lg"></crds-button>
+      <crds-button color="gray" text="some text"></crds-button>
+      <crds-button color="gray" text="some text" size="sm"></crds-button>
+      <br />
+      <crds-button color="gray-light" text="some text" size="lg"></crds-button>
+      <crds-button color="gray-light" text="some text"></crds-button>
+      <crds-button color="gray-light" text="some text" size="sm"></crds-button>
+      <p style="background: black; padding: 10px;">
+
+        <crds-button color="white" text="some text" size="lg" ></crds-button>
+        <crds-button color="white" text="some text"></crds-button>
+        <crds-button color="white" text="some text" size="sm"></crds-button>
+      </p>
+      <crds-button type="outline" color="blue" text="some text" size="lg"></crds-button>
+      <crds-button type="outline" color="blue" text="some text"></crds-button>
+      <crds-button type="outline" color="blue" text="some text" size="sm"></crds-button>
+      <br />
+      <crds-button type="outline" color="cyan" text="some text" size="lg"></crds-button>
+      <crds-button type="outline" color="cyan" text="some text"></crds-button>
+      <crds-button type="outline" color="cyan" text="some text" size="sm"></crds-button>
+      <br />
+      <crds-button type="outline" color="gray" text="some text" size="lg"></crds-button>
+      <crds-button type="outline" color="gray" text="some text"></crds-button>
+      <crds-button type="outline" color="gray" text="some text" size="sm"></crds-button>
+      <br />
+      <crds-button type="outline" color="gray-light" text="some text" size="lg"></crds-button>
+      <crds-button type="outline" color="gray-light" text="some text"></crds-button>
+      <crds-button type="outline" color="gray-light" text="some text" size="sm"></crds-button>
+      <br />
+      <p style="background: black; padding: 10px;">
+
+      <crds-button type="outline" color="white" text="some text" size="lg"></crds-button>
+      <crds-button type="outline" color="white" text="some text"></crds-button>
+      <crds-button type="outline" color="white" text="some text" size="sm"></crds-button>
+      </p>
+      <crds-button color="blue"  text="some text" display="block"></crds-button>
+      <crds-button color="blue" text="some text" display="block" type="outline"></crds-button>
+      <br/>
   </div>
 
   <div class="jumbotron jumbotron-xl"
