redesigned I'm Feeling button on 90DT

--- a/src/index.html
+++ b/src/index.html
@@ -65,6 +65,8 @@
       <crds-primary-button text="test button" color="cyan"></crds-primary-button>
       <crds-label tint="warning" text="Label"></crds-label>
       <br />
+      <crds-tithe-challenge auth-token></crds-tithe-challenge>
+      <br />
 
       <crds-button type="link" text="some text"  ></crds-button>
       <crds-button type="link" secondary="true" text="some text"></crds-button>
