feature/US18563-truncate-description - Removes TruncateDescription - Adjusts index.html - Updates story

--- a/src/index.html
+++ b/src/index.html
@@ -207,22 +207,22 @@
     <crds-shared-footer></crds-shared-footer>
   </div>
 
-  <div>
-    <crds-media-card
-    heading='Puerto Rico'
-    meta="10/19/19 - 10/25/19"
-    thumbnail-src="https://crossroads-media.imgix.net/images/crds-music/jumbotron/music-laying-it-all-down-bg.jpg?format=auto,compress"
-    image-src="https://crds-media.imgix.net/5CaAjF9bDkXWOw6YXl92cZ/fccff599d00f378c1aae525bfff94a2b/onsite-groups-header_2x.jpg?format=auto,compress"
-    button-src="#"
-    content-type="article">
-    <p>
-      LAUNCH 2019 is a great way to make the
-      connections that will help you thrive as
-      you start your journey post high school.
-      We’ll have dinner, live worship, and a chance
-      to meet some college students and hear their stories.
-      <a href='#'> RSVP here. <a/> </p>
-    </crds-media-card>
+  <div class="container" style="width: 350px; display: flex; align-content: center; justify-content: center;">
+          <crds-media-card
+          heading='Puerto Rico'
+          meta="10/19/19 - 10/25/19"
+          thumbnail-src="https://crossroads-media.imgix.net/images/crds-music/jumbotron/music-laying-it-all-down-bg.jpg?format=auto,compress"
+          image-src="https://crds-media.imgix.net/5CaAjF9bDkXWOw6YXl92cZ/fccff599d00f378c1aae525bfff94a2b/onsite-groups-header_2x.jpg?format=auto,compress"
+          button-src="#"
+          content-type="article">
+          <p>
+            LAUNCH 2019 is a great way to make the
+            connections that will help you thrive as
+            you start your journey post high school.
+            We’ll have dinner, live worship, and a chance
+            to meet some college students and hear their stories.
+            <a href='#'> RSVP here. <a/> </p>
+          </crds-media-card>
   </div>
 
 
