US18507 | Christian | add crds-group-privacy-toggle component

--- a/src/index.html
+++ b/src/index.html
@@ -62,6 +62,7 @@
         <crds-snail-trail-link onclick="alert('zzz')">Click Me</crds-snail-trail-link>
         <crds-snail-trail-link href="/something">No Event</crds-snail-trail-link>
       </crds-snail-trail> -->
+      <crds-group-privacy-toggle group-id="199490"></crds-group-privacy-toggle>
       <crds-primary-button text="test button" color="cyan"></crds-primary-button>
       <crds-label tint="warning" text="Label"></crds-label>
       <br />
