US18837 Snail Trail Disabled Add logic to remove snail trail if set to disable

--- a/src/index.html
+++ b/src/index.html
@@ -56,14 +56,13 @@
   </div>
 
   <div class="snail-trail-skeleton">
-    <crds-snail-trail name="media" env="int"></crds-snail-trail>
+    <crds-snail-trail name="disabled" env="int"></crds-snail-trail>
     <!-- <crds-snail-trail>
         <crds-snail-trail-link onclick="alert('zzz')">Click Me</crds-snail-trail-link>
         <crds-snail-trail-link href="/something">No Event</crds-snail-trail-link>
       </crds-snail-trail> -->
       <crds-primary-button text="test button" color="cyan"></crds-primary-button>
-      <crds-label tint="warning" text="Label"></crds-label>
-      <br />
+  
 
   </div>
 
